--- a/conf.d/jwp.conf
+++ b/conf.d/jwp.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name jwp.droplet.alixparadis.com;
+    server_name jwp.alixparadis.com;
 
     location / {
         proxy_pass http://jwp-deployement:8080;
