--- a/conf.d/jwp-ssl.conf
+++ b/conf.d/jwp-ssl.conf
@@ -1,16 +1,14 @@
 server {
-    listen 80;
+    listen 443 ssl;
     server_name jwp.alixparadis.com;
+
+    ssl_certificate /etc/letsencrypt/live/jwp.alixparadis.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/jwp.alixparadis.com/privkey.pem;
 
     location / {
         proxy_pass http://jwp-deployement:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
-
-    # ACME challenge for certbot
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
     }
 }
