redirect to https

--- a/conf.d/jwp-ssl.conf
+++ b/conf.d/jwp-ssl.conf
@@ -5,6 +5,9 @@ server {
     ssl_certificate /etc/letsencrypt/live/jwp.alixparadis.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/jwp.alixparadis.com/privkey.pem;
 
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+
     location / {
         proxy_pass http://jwp-deployement:8080;
         proxy_set_header Host $host;
