--- a/conf.d/jwp.conf
+++ b/conf.d/jwp.conf
@@ -2,15 +2,9 @@ server {
     listen 80;
     server_name jwp.alixparadis.com;
 
-    location / {
-        proxy_pass http://jwp-deployement:8080;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
-
-    # ACME challenge for certbot
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
+
+    return 301 https://$host$request_uri;
 }
