add root domain and single certificate

--- a/conf.d/root-ssl.conf
+++ b/conf.d/root-ssl.conf
@@ -2,8 +2,20 @@ server {
     listen 443 ssl;
     server_name www.alixparadis.com;
 
-    ssl_certificate /etc/letsencrypt/live/www.alixparadis.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/www.alixparadis.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/alixparadis.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/alixparadis.com/privkey.pem;
+
+    location / {
+        return 301 https://alixparadis.com$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name alixparadis.com;
+
+    ssl_certificate /etc/letsencrypt/live/alixparadis.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/alixparadis.com/privkey.pem;
 
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
