--- a/conf.d/jwp-ssl.conf
+++ b/conf.d/jwp-ssl.conf
@@ -2,8 +2,8 @@ server {
     listen 443 ssl;
     server_name jwp.alixparadis.com;
 
-    ssl_certificate /etc/letsencrypt/live/jwp.alixparadis.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/jwp.alixparadis.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/alixparadis.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/alixparadis.com/privkey.pem;
 
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
