--- a/conf.d/www.conf
+++ b/conf.d/www.conf
@@ -8,3 +8,17 @@ server {
 
     return 301 https://$host$request_uri;
 }
+
+server {
+    listen 80;
+    server_name alixparadis.com;
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    # Redirect HTTP → HTTPS for root
+    location / {
+        return 301 https://alixparadis.com$request_uri;
+    }
+}
