--- a/conf.d/common.conf
+++ b/conf.d/common.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name jwp.alixparadis.com;
+    server_name alixparadis.com www.alixparadis.com jwp.alixparadis.com;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
